--- a/force-app/main/default/aura/UIJobControllerUtility/UIJobControllerUtility.cmp
+++ b/force-app/main/default/aura/UIJobControllerUtility/UIJobControllerUtility.cmp
@@ -1,7 +1,7 @@
 <aura:component implements="lightning:utilityItem" access="global" >
     <aura:attribute name="supportsPopOut" type="Boolean" default="false" />
     <aura:attribute name="recordIdStr" type="String" default="Test_Job"/>
-    <aura:attribute name="metaDataName" type="String" default="Test_Job"/>
+    <aura:attribute name="metaDataName" type="String" default="Test_Job" access="global"/>
     <aura:attribute name="inputJSON" type="String" default=""/>
     <lightning:utilityBarAPI aura:id="utilitybar" />
     <lightning:messageChannel type="Call_UIJob__c"   aura:id="callUIJobMessageChannel" onMessage="{!c.handleMessage}"/>
