--- a/force-app/main/default/aura/UIJobControllerUtility/UIJobControllerUtility.cmp
+++ b/force-app/main/default/aura/UIJobControllerUtility/UIJobControllerUtility.cmp
@@ -4,9 +4,8 @@
     <aura:attribute name="metaDataName" type="String" default="Test_Job" access="global"/>
     <aura:attribute name="inputJSON" type="String" default=""/>
     <lightning:utilityBarAPI aura:id="utilitybar" />
-    <lightning:messageChannel type="Call_UIJob__c"   aura:id="callUIJobMessageChannel" onMessage="{!c.handleMessage}"/>
     <c:uiJobController aura:id="uiJobLWC" recordid="{!v.recordIdStr}" 
     metadataname="{!v.metaDataName}"
-    inputJSON="{!v.inputJSON}" onjobEnd="{!c.handleJobEnd}"></c:uiJobController>
+    inputJSON="{!v.inputJSON}" onjobEnd="{!c.handleJobEnd}" onpopUp="{!c.handlePopup}" isUtility="true"></c:uiJobController>
 
 </aura:component>
