--- a/force-app/main/default/aura/callUIJobComponent/callUIJobComponent.cmp
+++ b/force-app/main/default/aura/callUIJobComponent/callUIJobComponent.cmp
@@ -1,6 +1,5 @@
 <aura:component implements="flexipage:availableForAllPageTypes,force:hasRecordId,lightning:availableForFlowScreens" access="global" >
     <aura:attribute name="metaDataName" type="String" default="Test_Job" access="global"/>
     <aura:attribute name="buttonLabel" type="String" default="Start" access="global"/>
-    <lightning:messageChannel type="Call_UIJob__c"   aura:id="callUIJobMessageChannel"/>
-    <lightning:button label="{!v.buttonLabel}" onclick="{! c.handleClick }"/>
+    <c:uiJobCaller aura:id="uiJobCaller"  metaDataName="{!v.metaDataName}" buttonLabel="{!v.buttonLabel}"></c:uiJobCaller>
 </aura:component>
